fix set width of home causing horizontal scroll at small screen width

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -4,7 +4,6 @@
   padding: 1rem;
   position: sticky;
   top: 0;
-  z-index: 1;
 }
 
 .nav {
