--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,7 +3,6 @@
 .home {
   margin: auto;
   margin-top: 4rem;
-  width: 40rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
